Attempt to fix cegui-0 issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ cmake_minimum_required(VERSION 2.6)
 
 project(Thrive)
 
+
+
 ###################
 # Cache Variables #
 ###################
@@ -144,7 +146,19 @@ include_directories(
 
 find_package(CEGUI REQUIRED QUIET COMPONENTS OGRE)
 
-include_directories(SYSTEM ${CEGUI_INCLUDE_DIRS})
+#include_directories(SYSTEM ${CEGUI_INCLUDE_DIRS})
+message(STATUS "TEST")
+
+message(STATUS ${CEGUI_INCLUDE_DIR})
+message(STATUS "TEST2")
+
+
+message(FATAL_ERRROR ${CEGUI_INCLUDE_DIR})
+
+#set(CEGUI_INCLUDE_DIR 
+include_directories(SYSTEM ${CEGUI_INCLUDE_DIR})
+#include_directories(SYSTEM ${CEGUI_INCLUDE_DIR}/../../)
+
 
 #######
 # TinyXML #
